# AGITracker-audit-mirror

./: CHANGELOG.md  COMPLETE_AUDIT_VERIFIED.md  CONTRIBUTING.md  DEPLOYMENT.md  ENGINEERING_OVERVIEW.md  FINAL_GPT5_VERIFICATION.md  GPT5_AUDIT_RESPONSE.md  MANIFEST.txt  MIGRATION_POLICY_FIX.md  QUICKSTART.md  README.md  ROADMAP.md  TROUBLESHOOTING.md
docs/: SECURITY.md  (+11 more)
services/etl/: .api_key_generated.txt  .slugignore  Dockerfile  Procfile  pyproject.toml  setup.py  start.sh  supervisord.conf
services/etl/app/: __init__.py  auth.py  celery_app.py  config.py  database.py  main.py  models.py  observability.py
services/etl/app/mapping/: __init__.py
services/etl/app/metrics/: __init__.py  roadmap_status.py
services/etl/app/middleware/: __init__.py  api_key_auth.py  request_id.py  security_headers.py
services/etl/app/routers/: admin.py  dashboard.py  forecasts.py  incidents.py  progress_index.py  signposts.py  stories.py
services/etl/tests/: __init__.py  conftest.py  test_audit_logging.py  test_caching.py  test_credibility_scoring.py  test_dashboard_api.py  test_event_analysis.py  test_event_mapper.py  test_event_mapper_v2.py  test_event_mapping_goldset.py  test_forecasts_api.py  test_gpqa_parser.py  test_hle_monitor_only.py  test_hle_parser.py  test_incidents_api.py  test_llm_budget.py  test_llm_prompts.py  test_mapper_accuracy.py  test_mapping_goldset.py  test_moderation_flow.py  test_osworld_parser.py  test_progress_index.py  test_request_id.py  test_retraction.py  test_scoring.py  test_security.py  test_security_real.py  test_seeds_validation.py  test_signposts_api.py  test_simulator.py  test_webarena_parser.py
(+438 files in other folders)
