[project]
name = "agi-tracker-etl"
version = "0.1.0"
description = "ETL service for AGI Signpost Tracker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "psycopg[binary]>=3.1.13",
    "pgvector>=0.2.4",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "celery[redis]>=5.3.4",
    "redis[hiredis]>=4.2.0,<5.0.0",
    "httpx>=0.25.2",
    "tenacity>=8.2.3",
    "openai>=1.3.0",
    "python-dateutil>=2.8.2",
    "structlog>=23.2.0",
    "sentry-sdk[fastapi]>=1.38.0",
    "feedparser>=6.0.10",
    "playwright>=1.40.0",
    "pyyaml>=6.0.1",
    "fastapi-cache2[redis]>=0.2.1",
    "slowapi>=0.1.9",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-community>=0.0.10",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.1",
    "ruff>=0.1.7",
    "httpx",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

